<resources>
    <string name="app_name">Inclass_1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="number_1">Number 1</string>
    <string name="enter_a">Enter A</string>
    <string name="divide">/</string>
    <string name="Enter_b">Enter B</string>
    <string name="calculator">Simple Calculator</string>
    <string name="equal">=</string>
    <string name="not_available">N/A</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="operations">Operations</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="multiuply">Multiply</string>
    <string name="divide_op">Divide</string>
    <string name="title_activity_main_activity2_inclass2">MainActivity2_inclass2</string>
</resources>